# asl-ml-immersion

./: .cloudbuild.yaml  .flake8_nb  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  Table of Contents.ipynb  cloudbuild.yaml  docker-compose.yml  e.py  gen_toc.py  pylintrc  pyproject.toml  requirements-common.txt  requirements-dev.txt  requirements-without-deps.txt  requirements.txt  setup.py
kernels/: a2a.sh  adk.sh  adk_mcp_a2a.sh  asl_kernel.sh  bert_kernel.sh  gemini.sh  keras_cv.sh  kfp_mlops.sh  langchain.sh  langchain_components.sh  lit.sh  object_detection.sh  pyproject.toml  pytorch_kfp.sh  reinforcement_learning.sh  tf_recommenders.sh  uncertainty_aware_models.sh
scaffolds/adk_ide/: .gitignore  Makefile  README.md  adk_deploy_agent_engine.sh  adk_deploy_cloud_run.sh  adk_deploy_cloudrun.sh  adk_deploy_webui.sh  cloud_ws_setup.sh  create_new_project.sh  curl_create_session.sh  curl_send_query.sh  deploy_agent_engine.py  env.example  launch.json  pyproject.toml  set_venv.sh  settings.json  setup_adk_ide.sh  setup_mcp_toolbox.sh
scaffolds/adk_ide/adk_api_server_test/: curl_create_session.sh  curl_send_query.sh
scaffolds/adk_ide/agent_01_tool_func/: agent.py  tools.py
scaffolds/adk_ide/agent_01_tool_func_long_running/: agent.py  run_agent.py
scaffolds/adk_ide/agent_01_tool_func_parallel/: agent.py
scaffolds/adk_ide/agent_02_artifacts/: agent.py
scaffolds/adk_ide/agent_02_callback/: agent.py
scaffolds/adk_ide/agent_02_multi_tools/: agent.py  tools.py
scaffolds/adk_ide/agent_03_search_tool/: agent.py
scaffolds/adk_ide/agent_03_tool_func_long_running/: agent.py
scaffolds/adk_ide/agent_03_vertex_ai_search_tool/: agent.py
scaffolds/adk_ide/agent_04_agent_tool/: agent.py  tools.py
scaffolds/adk_ide/agent_04_tool_func_parallel/: agent.py
scaffolds/adk_ide/agent_05_remote_a2a_custom_server_adk/: agent.py  remote_weather_agent.py  run_remote_agent.sh  tools.py
scaffolds/adk_ide/agent_05_remote_a2a_langgraph/: agent.py  remote_weather_agent_langgraph.py  tools.py
scaffolds/adk_ide/agent_05_remote_sub_agent_a2a/: agent.py  main.py  remote_weather_agent.py  run_remote_agent.sh
scaffolds/adk_ide/agent_05_sub_agent/: agent.py  tools.py
scaffolds/adk_ide/agent_06_local_custom_agents/: agent.py  run_agent_demo
scaffolds/adk_ide/agent_06_local_parallel_agents/: agent.py
scaffolds/adk_ide/agent_06_local_sub_agents_seq/: agent.py
scaffolds/adk_ide/agent_07_callback/: tools.py
scaffolds/adk_ide/agent_07_remote_sub_agents/: agent.py  remote_analyzer_agent.py  remote_trending_agent.py
scaffolds/adk_ide/agent_08_stateful_agent/: agent.py  tools.py
scaffolds/adk_ide/agent_09_stateful_agent/: tools.py
scaffolds/adk_ide/agent_09_workshop_prep_flow/: agent.py
scaffolds/adk_ide/agent_10_local_sub_agents_seq/: agent.py  tools.py
scaffolds/adk_ide/agent_10_mcp_bigquery/: agent.py
scaffolds/adk_ide/agent_10_mcp_tool_agent/: agent.py  mcp_demo_server.py  sku_data.csv  tools.py
scaffolds/adk_ide/agent_11_deploy_agent_engine/: agent.py  tools.py
scaffolds/adk_ide/agent_12_deploy_cloud_run/: Dockerfile  agent.py  deploy_adk_cloud_run.sh  main.py  requirements.txt
scaffolds/adk_ide/agent_13_big_query_tool/: agent.py
scaffolds/adk_ide/agent_14_human_tool_confirmation/: agent.py
scaffolds/adk_ide/agent_14_ocr/: agent.py
scaffolds/adk_ide/agent_15_big_query_tool/: agent.py
scaffolds/adk_ide/agent_15_openapi/: agent.py
scaffolds/adk_ide/agent_16_geocoding/: agent.py
scaffolds/adk_ide/agent_17_1_code_exec_builtin/: agent.py
scaffolds/adk_ide/agent_17_2_code_exec_unsafe/: agent.py
scaffolds/adk_ide/agent_17_code_exec_vertex/: agent.py
scaffolds/adk_ide/agent_18_explainable_ai/: agent.py  tools.py
scaffolds/adk_ide/agent_19_gemini_config/: agent.py
scaffolds/adk_ide/agent_20_remote_sub_agent_a2a/: agent.py  run_remote_a2a_agent.py
scaffolds/adk_ide/agent_21_remote_a2a_custom_server_adk/: remote_weather_agent.py
scaffolds/adk_ide/agent_22_remote_a2a_executor_impl/: agent.py  remote_a2a_executor_impl.py  tools.py
scaffolds/adk_ide/agent_23_remote_a2a_executor_long_running/: remote_a2a_executor_impl.py
scaffolds/adk_ide/agent_26_mcp_tool_agent/: agent.py  (+2 more)
(+1678 files in other folders)
